--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 :root {
 	--vraiMarron : #6B3A04;
+	--orange : #FF4D00;
+	--nuitInvader : #4D338F;
 }
 
 * {
@@ -15,44 +17,190 @@ body {
 	overflow: hidden;
 }
 
-.message {
-	background-color: white;
-	width: 100vw;
-	height: 20vh;
+or {
+	color: var(--orange);
 }
 
-world {
-	background-color: skyblue;
+enter {
+	position: relative;
+	animation-name: float; 
+	animation-duration: 1s;
+	animation-iteration-count: infinite;
+	animation-direction: alternate;
+}
+
+@keyframes float {
+    from {top: 0px;}
+    to {top: 6px;}
+}
+
+firstScreen {
+	background-color: var(--nuitInvader);
+	background-image: url("cadre.png");
+	background-size: cover;
+	background-position: 50% 50%;
 	position: absolute;
 	top: 0;
+	z-index: 1000;
 	height: 100vh;
 	width: 100vw;
 }
 
-personnage {
+#begin {
+	position: absolute;
+	top: 15vh;
+	width: 100vw;
+	text-align: center;
+	animation-name: float2; 
+	animation-duration: 1s;
+	animation-iteration-count: infinite;
+	animation-direction: alternate;
+}
+
+@keyframes float2 {
+    from {top: 15vh;}
+    to {top: 16vh;}
+}
+
+#title {
+	position: absolute;
+	color: var(--orange);
+	font-size: 50px;
+	font-family: Arial;
+	text-align: center;
+	width: 100vw;
+	top: 50vh;
+	max-height: 10vh;
+	text-shadow: 0 0 7px white;
+}
+
+#enterFirst {
+	position: absolute;
+	color: var(--orange);
+	font-size: 30px;
+	font-family: Arial;
+	text-align: center;
+	width: 100vw;
+	top: 65vh;
+	text-shadow: 0 0 7px white;
+}
+
+#copyright {
+	position: absolute;
+	color: white;
+	font-size: 10px;
+	font-family: Helvetica;
+	text-align: right;
+	width: 70vw;
+	left: 15vw;
+	bottom: 20vh;
+	text-align: right;
+}
+
+
+.message {
+	position: absolute;
+	top: 40vh;
+	left: 30vw;
+	z-index: 199;
+	background-color: rgba(77, 51, 143, 0.8);
+	border-radius: 30px;
+	box-shadow: 0 0 8px #4D338F;
+	color: white;
+	font-family: Helvetica;
+	font-size: 14px;
+	line-height: 15px;
+	letter-spacing: 1px;
+	padding: 20px 12px 20px 12px;
+	text-align: justify;
+	width: 50vw;
+	height: auto;
+}
+.message::after {
+    content: "";
+    position: absolute;
+    top: 100%;
+    border-left: 20px solid transparent;
+    border-right: 20px solid transparent;
+    height: 30px;
+    border-top: 30px solid rgba(77, 51, 143, 0.8);
+    box-shadow: 0 0 8px #4D338F;
+    left: 70%;
+}
+
+cadre {
+	position: absolute;
+	top: 0;
+	height: 100vh;
+	width: 100vw;
+	z-index: 99;
+	background-image: url("cadre.png");
+	background-size: cover;
+	background-position: 50% 50%;
+}
+
+world {
+	background-color: skyblue;
+	background-image: url("fond.png");
+	background-size: cover;
+	background-position: 50% 50%;
+	position: absolute;
+	top: 0;
+	z-index: 100;
+	height: 100vh;
+	width: 100vw;
+}
+
+personnages {
 	position: absolute;
 	bottom: 20vh;
 	height: 15vh;
 	width: 100vw;
-	background-color: var(--vraiMarron);
+	z-index: 0;
 }
 
-ground {
-	position: absolute;
-	bottom: 0;
-	height: 20vh;
-	width: 100vw;
-	background-color: var(--vraiMarron);
-}
-
-mazars invader {
+mazars, invader {
 	height: 15vh;
 	width: 10vw;
 	bottom: 0;
 	object-fit: cover;
+	position: absolute;
+}
+
+mazars {
+	top: 15px;
+	z-index: 10;
+}
+
+invader {
+	z-index: 5;
 }
 
 img {
 	height: 15vh;
 	width: 10vw;
+}
+
+#messageEnd{
+	position: absolute;
+	color: var(--orange);
+	font-size: 50px;
+	font-family: Arial;
+	text-align: center;
+	width: 100vw;
+	top: 50vh;
+	max-height: 10vh;
+	text-shadow: 0 0 7px white;
+}
+
+end{
+	background-color: var(--nuitInvader);
+	background-image: url("cadre.png");
+	background-size: cover;
+	background-position: 50% 50%;
+	position: absolute;
+	top: 0;
+	z-index: 1000;
+	height: 100vh;
+	width: 100vw;
 }
